[gd_scene load_steps=4 format=3 uid="uid://cvc0dthjt5ifa"]

[ext_resource type="Script" path="res://craft_slot.gd" id="1_1oqxt"]
[ext_resource type="Texture2D" uid="uid://cms1nvkyr43o" path="res://assets/small_rocks.png" id="1_oe37j"]
[ext_resource type="Texture2D" uid="uid://c0kamjucc7q03" path="res://assets/Arrow.png" id="2_vxqii"]

[node name="Craft" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
script = ExtResource("1_1oqxt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Ingredients" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IngredientTexture" type="TextureRect" parent="HBoxContainer/Ingredients"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_oe37j")
expand_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_vxqii")
expand_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="CraftResultName" type="Label" parent="HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Rocks"

[node name="CraftResultTexture" type="TextureRect" parent="HBoxContainer/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_oe37j")
expand_mode = 2
